# panel-firmware

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  memory.x
.cargo/: config
.github/workflows/: check.yml  clippy.yml  test.yml
panel-protocol/: Cargo.toml
panel-protocol/src/: lib.rs
src/: bootload.rs  button.rs  counter.rs  debouncer.rs  fan_controller.rs  main.rs  overhead_light.rs  protocol.rs  rgb.rs  rgb_led.rs  serial.rs
