[package]
name = "panel-firmware"
version = "0.3.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
arrayvec = { version = "0.5.2", default-features = false }
stm32f4xx-hal = { version = "0.9", features = ["rt", "stm32f411", "usb_fs"] }
embedded-hal = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.6"
panic-reset = "0.1"
nb = "1"
panel-protocol = { git = "https://github.com/tonarino/panel-protocol.git", rev = "0.4" }
usb-device = "0.2"
usbd-serial = "0.1"
libm = "0.2"
